--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Sobre mim</a>
+                    <a href="#">Sobre mim</a>
                 </li>
                 <li>
-                    <a href="project.html">Projetos</a>
+                    <a href="#">Projetos</a>
                 </li>
                 <li>
                     <a href="#">Contato</a>
